--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Al Rushd Library | Knowledge Gateway</title>
+    <title>Al Rushd Library </title>
     <!-- CSS -->
     <link rel="stylesheet" href="style.css">
     <!-- Font Awesome -->
@@ -141,3 +141,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
