Revise about.html with style and content updates
Updated styles and content in the about.html file, including changes to the hero section and footer.

--- a/about.html
+++ b/about.html
@@ -20,6 +20,8 @@
                 <i class="fas fa-bars"></i>
             </div>
             <ul class="nav-links">
+                <li class="close-menu">
+                    <i class="fas fa-times"></i></li>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html" class="active">About Us</a></li>
                 <li><a href="service1.html">Lending</a></li>
@@ -30,7 +32,7 @@
     </header>
 
     <!-- Page Header -->
-    <section class="hero" style="height: 60vh; background-image: linear-gradient(rgba(13, 27, 42, 0.8), rgba(13, 27, 42, 0.9)), url('https://images.unsplash.com/photo-1524995997946-a1c2e315a42f?ixlib=rb-1.2.1&auto=format&fit=crop&w=1920&q=80');">
+    <section class="hero" style="height: 60vh; background-image: linear-gradient(rgba(13, 92, 53, 0.8), rgba(13, 92, 53, 0.95)), url('https://images.unsplash.com/photo-1524995997946-a1c2e315a42f?ixlib=rb-1.2.1&auto=format&fit=crop&w=1920&q=80');">
         <div class="hero-content reveal">
             <h1>About <span>Us</span></h1>
             <p>A story of passion for knowledge that began decades ago and continues into the future.</p>
@@ -41,10 +43,10 @@
     <section>
         <div style="display: flex; flex-wrap: wrap; align-items: center; gap: 4rem;">
             <div style="flex: 1; min-width: 300px;" class="reveal">
-                <img src="https://images.unsplash.com/photo-1481627834876-b7833e8f5570?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" alt="About Us" style="border-radius: 20px; box-shadow: var(--shadow-lg); border: 2px solid var(--accent-gold);">
+                <img src="https://images.unsplash.com/photo-1481627834876-b7833e8f5570?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" alt="About Us" style="border-radius: 20px; box-shadow: var(--shadow-lg); border: 2px solid var(--accent-green);">
             </div>
             <div style="flex: 1; min-width: 300px;" class="reveal">
-                <h2 style="color: var(--accent-gold); font-size: 2.5rem; margin-bottom: 1.5rem;">Our Vision & Mission</h2>
+                <h2 style="color: var(--primary-color); font-size: 2.5rem; margin-bottom: 1.5rem;">Our Vision & Mission</h2>
                 <p style="margin-bottom: 1.5rem; font-size: 1.1rem; opacity: 0.9;">
                     Al Rushd Library was established to be a leading cultural beacon combining authenticity and modernity. We believe that knowledge is a right for everyone, and we strive to provide a stimulating environment for learning and creativity.
                 </p>
@@ -52,14 +54,14 @@
                     Our library houses thousands of titles in various disciplines, from Islamic sciences to modern technology, to meet the passion of every researcher and reader.
                 </p>
                 
-                <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 1rem;">
-                    <div style="padding: 1rem; background: var(--glass-bg); border-radius: 10px;">
-                        <i class="fas fa-bullseye" style="color: var(--accent-gold); font-size: 1.5rem; margin-bottom: 0.5rem;"></i>
+                <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 1rem; ">
+                    <div class="reveal" style="padding: 1rem; background: var(--glass-bg); border-radius: 10px;">
+                        <i class="fas fa-bullseye" style="color: var(--accent-green); font-size: 1.5rem; margin-bottom: 0.5rem;"></i>
                         <h4 style="margin-bottom: 0.5rem;">Excellence</h4>
                         <p style="font-size: 0.9rem; opacity: 0.7;">Providing services with the highest quality standards.</p>
                     </div>
-                    <div style="padding: 1rem; background: var(--glass-bg); border-radius: 10px;">
-                        <i class="fas fa-users" style="color: var(--accent-gold); font-size: 1.5rem; margin-bottom: 0.5rem;"></i>
+                    <div class="reveal" style="padding: 1rem; background: var(--glass-bg); border-radius: 10px;">
+                        <i class="fas fa-users" style="color: var(--accent-green); font-size: 1.5rem; margin-bottom: 0.5rem;"></i>
                         <h4 style="margin-bottom: 0.5rem;">Community</h4>
                         <p style="font-size: 0.9rem; opacity: 0.7;">Building a community of educated readers.</p>
                     </div>
