--- a/contact.html
+++ b/contact.html
@@ -29,24 +29,25 @@
         .form-group label {
             display: block;
             margin-bottom: 0.5rem;
-            color: var(--accent-gold);
+            color: var(--text-dark);
+            font-weight: 600;
         }
 
         .form-group input, .form-group textarea {
             width: 100%;
             padding: 1rem;
-            background: rgba(255, 255, 255, 0.05);
+            background: var(--white);
             border: 1px solid var(--glass-border);
             border-radius: 10px;
-            color: var(--white);
+            color: var(--text-dark);
             font-size: 1rem;
             transition: var(--transition);
         }
 
         .form-group input:focus, .form-group textarea:focus {
-            border-color: var(--accent-gold);
+            border-color: var(--accent-green);
             outline: none;
-            background: rgba(255, 255, 255, 0.1);
+            background: var(--white);
         }
 
         .info-item {
@@ -64,7 +65,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            color: var(--accent-gold);
+            color: var(--accent-green);
             font-size: 1.2rem;
         }
     </style>
@@ -82,6 +83,8 @@
                 <i class="fas fa-bars"></i>
             </div>
             <ul class="nav-links">
+                <li class="close-menu">
+                    <i class="fas fa-times"></i></li>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="service1.html">Lending</a></li>
@@ -92,7 +95,7 @@
     </header>
 
     <!-- Page Header -->
-    <section class="hero" style="height: 50vh; background-image: linear-gradient(rgba(13, 27, 42, 0.8), rgba(13, 27, 42, 0.9)), url('https://images.unsplash.com/photo-1423666639041-f14d7045c5d9?ixlib=rb-1.2.1&auto=format&fit=crop&w=1920&q=80');">
+    <section class="hero" style="height: 50vh; background-image: linear-gradient(rgba(13, 92, 53, 0.8), rgba(13, 92, 53, 0.95)), url('https://images.unsplash.com/photo-1423666639041-f14d7045c5d9?ixlib=rb-1.2.1&auto=format&fit=crop&w=1920&q=80');">
         <div class="hero-content reveal">
             <h1>Contact <span>Us</span></h1>
             <p>We are here to answer all your inquiries.</p>
@@ -103,7 +106,7 @@
     <section>
         <div class="contact-container reveal">
             <div class="contact-info">
-                <h2 style="margin-bottom: 2rem; color: var(--accent-gold);">Contact Details</h2>
+                <h2 style="margin-bottom: 2rem; color: var(--primary-color);">Contact Details</h2>
                 <div class="info-item">
                     <div class="info-icon"><i class="fas fa-map-marker-alt"></i></div>
                     <div>
@@ -136,11 +139,11 @@
             </div>
             
             <div class="contact-form">
-                <h2 style="margin-bottom: 2rem; color: var(--accent-gold);">Send Us a Message</h2>
+                <h2 style="margin-bottom: 2rem; color: var(--primary-color);">Send Us a Message</h2>
                 <form>
                     <div class="form-group">
                         <label for="name">Name</label>
-                        <input type="text" id="name" placeholder="Enter your full name">
+                        <input type="text" id="name" placeholder="Enter your full name" ">
                     </div>
                     <div class="form-group">
                         <label for="email">Email</label>
@@ -156,7 +159,7 @@
         </div>
 
         <!-- Fake Map -->
-        <div style="margin-top: 4rem; height: 400px; border-radius: 20px; overflow: hidden; border: 1px solid var(--accent-gold);" class="reveal">
+        <div style="margin-top: 4rem; height: 400px; border-radius: 20px; overflow: hidden; border: 1px solid var(--accent-green);" class="reveal">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14496.882481065112!2d46.6752957!3d24.7135517!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e2f03890d489399%3A0xba974d1c98e79fd5!2z2KfZhNix2YrYp9Ni!5e0!3m2!1sar!2ssa!4v1625686000000!5m2!1sar!2ssa" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
     </section>
