--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Al Rushd Library </title>
+    <title>Al Rushd Library | Knowledge Gateway</title>
     <!-- CSS -->
     <link rel="stylesheet" href="style.css">
     <!-- Font Awesome -->
@@ -15,13 +15,17 @@
     <header>
         <div class="logo-container">
             <img src="1.jpeg" alt="Al Rushd Logo" class="logo-img">
-            <span class="brand-name" style="color: #FFD700; font-weight: bold; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">مكتبة الرشد</span>
+            <span class="brand-name">Al Rushd </span>
         </div>
         <nav>
             <div class="mobile-toggle">
-                <i class="fas fa-bars"></i>
+                <i class="fas fa-bars dd"></i>
             </div>
+            <!-- slide-out navigation; close icon implemented inside for mobile -->
             <ul class="nav-links">
+                <!-- close button only visible on mobile when menu is open -->
+                <li class="close-menu">
+                    <i class="fas fa-times"></i></li>
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="service1.html">Lending</a></li>
@@ -34,7 +38,7 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-content reveal">
-            <h1>Welcome to <span style="color: #FFD700; font-weight: bold; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">مكتبة الرشد</span></h1>
+            <h1>Welcome to <span>مكتبة الرشد</span></h1>
             <p>Your premier destination for knowledge and culture. We blend the heritage of the past with the technology of the future to offer you an unforgettable reading experience.</p>
             <a href="about.html" class="btn btn-primary">Discover More</a>
         </div>
@@ -72,17 +76,17 @@
             <p>Diverse knowledge covering all sciences and arts.</p>
         </div>
         <div class="features-grid">
-            <div class="card reveal" style="border: 1px solid var(--accent-gold);">
+            <div class="card reveal" style="border: 1px solid var(--accent-green);">
                 <i class="fas fa-quran"></i>
                 <h3>Islamic Studies</h3>
                 <p>A valuable collection of Quranic exegesis, jurisprudence, and Islamic history books.</p>
             </div>
-            <div class="card reveal" style="border: 1px solid var(--accent-gold);">
+            <div class="card reveal" style="border: 1px solid var(--accent-green);">
                 <i class="fas fa-flask"></i>
                 <h3>Science & Tech</h3>
                 <p>The latest publications in technology, natural sciences, and engineering.</p>
             </div>
-            <div class="card reveal" style="border: 1px solid var(--accent-gold);">
+            <div class="card reveal" style="border: 1px solid var(--accent-green);">
                 <i class="fas fa-palette"></i>
                 <h3>Arts & Literature</h3>
                 <p>World novels, poetry collections, and visual arts books.</p>
@@ -93,10 +97,10 @@
     <!-- Section 3: Call to Action / Quote -->
     <section id="quote">
         <div style="text-align: center; max-width: 800px; margin: 0 auto;" class="reveal">
-            <i class="fas fa-quote-left" style="font-size: 3rem; color: var(--accent-gold); margin-bottom: 2rem;"></i>
+            <i class="fas fa-quote-left" style="font-size: 3rem; color: var(--accent-green); margin-bottom: 2rem;"></i>
             <h2 style="font-size: 2.5rem; margin-bottom: 1.5rem; font-style: italic;">"Reading is travel through time without moving an inch."</h2>
             <p style="opacity: 0.8; font-size: 1.2rem; margin-bottom: 2.5rem;">Join us today and become part of our distinguished community of readers.</p>
-            <a href="contact.html" class="btn btn-primary" style="background: transparent; border-color: var(--accent-gold); color: var(--accent-gold);">Contact Us</a>
+            <a href="contact.html" class="btn btn-primary" style="background: rgb(78, 86, 43);  color: var(--accent-green); ">Contact Us</a>
         </div>
     </section>
 
@@ -134,11 +138,10 @@
             </div>
         </div>
         <div class="copyright">
-            <p>All Rights Reserved &copy; 2024 Al Rushd Library</p>
+            <p>All Rights Reserved &copy;  Al Rushd Library</p>
         </div>
     </footer>
 
     <script src="script.js"></script>
 </body>
 </html>
-
