--- a/service1.html
+++ b/service1.html
@@ -20,6 +20,8 @@
                 <i class="fas fa-bars"></i>
             </div>
             <ul class="nav-links">
+                <li class="close-menu">
+                    <i class="fas fa-times"></i></li>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="service1.html" class="active">Lending</a></li>
@@ -30,7 +32,7 @@
     </header>
 
     <!-- Page Header -->
-    <section class="hero" style="height: 50vh; background-image: linear-gradient(rgba(13, 27, 42, 0.8), rgba(13, 27, 42, 0.9)), url('https://images.unsplash.com/photo-1521587760476-6c12a4b040da?ixlib=rb-1.2.1&auto=format&fit=crop&w=1920&q=80');">
+    <section class="hero" style="height: 50vh; background-image: linear-gradient(rgba(13, 92, 53, 0.8), rgba(13, 92, 53, 0.95)), url('https://images.unsplash.com/photo-1521587760476-6c12a4b040da?ixlib=rb-1.2.1&auto=format&fit=crop&w=1920&q=80');">
         <div class="hero-content reveal">
             <h1>Book <span>Lending</span></h1>
             <p>Take knowledge home with you.</p>
@@ -63,18 +65,18 @@
         </div>
 
         <div style="margin-top: 4rem; text-align: center;" class="reveal">
-            <h3 style="margin-bottom: 2rem; color: var(--accent-gold);">Borrowing Steps</h3>
+            <h3 style="margin-bottom: 2rem; color: var(--primary-color);">Borrowing Steps</h3>
             <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 2rem;">
-                <div style="background: var(--glass-bg); padding: 1.5rem; border-radius: 50px; flex: 1; min-width: 200px; max-width: 300px;">
-                    <span style="display: inline-block; width: 40px; height: 40px; line-height: 40px; border-radius: 50%; background: var(--accent-gold); color: var(--primary-color); font-weight: bold; margin-bottom: 1rem;">1</span>
+                <div class="reveal" style="background: var(--glass-bg); padding: 1.5rem; border-radius: 50px; flex: 1; min-width: 200px; max-width: 300px;">
+                    <span style="display: inline-block; width: 40px; height: 40px; line-height: 40px; border-radius: 50%; background: var(--accent-green); color: var(--white); font-weight: bold; margin-bottom: 1rem;">1</span>
                     <p>Register</p>
                 </div>
-                <div style="background: var(--glass-bg); padding: 1.5rem; border-radius: 50px; flex: 1; min-width: 200px; max-width: 300px;">
-                    <span style="display: inline-block; width: 40px; height: 40px; line-height: 40px; border-radius: 50%; background: var(--accent-gold); color: var(--primary-color); font-weight: bold; margin-bottom: 1rem;">2</span>
+                <div class="reveal" style="background: var(--glass-bg); padding: 1.5rem; border-radius: 50px; flex: 1; min-width: 200px; max-width: 300px;">
+                    <span style="display: inline-block; width: 40px; height: 40px; line-height: 40px; border-radius: 50%; background: var(--accent-green); color: var(--white); font-weight: bold; margin-bottom: 1rem;">2</span>
                     <p>Select Books</p>
                 </div>
-                <div style="background: var(--glass-bg); padding: 1.5rem; border-radius: 50px; flex: 1; min-width: 200px; max-width: 300px;">
-                    <span style="display: inline-block; width: 40px; height: 40px; line-height: 40px; border-radius: 50%; background: var(--accent-gold); color: var(--primary-color); font-weight: bold; margin-bottom: 1rem;">3</span>
+                <div class="reveal" style="background: var(--glass-bg); padding: 1.5rem; border-radius: 50px; flex: 1; min-width: 200px; max-width: 300px;">
+                    <span style="display: inline-block; width: 40px; height: 40px; line-height: 40px; border-radius: 50%; background: var(--accent-green); color: var(--white); font-weight: bold; margin-bottom: 1rem;">3</span>
                     <p>Checkout</p>
                 </div>
             </div>
