--- a/service2.html
+++ b/service2.html
@@ -20,6 +20,8 @@
                 <i class="fas fa-bars"></i>
             </div>
             <ul class="nav-links">
+                <li class="close-menu">
+                    <i class="fas fa-times"></i></li>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="service1.html">Lending</a></li>
@@ -30,7 +32,7 @@
     </header>
 
     <!-- Page Header -->
-    <section class="hero" style="height: 50vh; background-image: linear-gradient(rgba(13, 27, 42, 0.8), rgba(13, 27, 42, 0.9)), url('https://images.unsplash.com/photo-1562564055-71e051d33c19?ixlib=rb-1.2.1&auto=format&fit=crop&w=1920&q=80');">
+    <section class="hero" style="height: 50vh; background-image: linear-gradient(rgba(13, 92, 53, 0.8), rgba(13, 92, 53, 0.95)), url('https://images.unsplash.com/photo-1562564055-71e051d33c19?ixlib=rb-1.2.1&auto=format&fit=crop&w=1920&q=80');">
         <div class="hero-content reveal">
             <h1>Printing <span>Services</span></h1>
             <p>High-quality printing and copying solutions for students and researchers.</p>
@@ -47,22 +49,22 @@
         <div style="display: flex; flex-wrap: wrap; gap: 3rem; align-items: center;">
             <div style="flex: 1; min-width: 300px;" class="reveal">
                 <ul style="list-style: none;">
-                    <li style="background: var(--secondary-color); padding: 1.5rem; margin-bottom: 1rem; border-radius: 15px; border-left: 4px solid var(--accent-gold); display: flex; align-items: center; gap: 1rem;">
-                        <i class="fas fa-print" style="font-size: 2rem; color: var(--accent-gold);"></i>
+                    <li style="background: var(--secondary-color); padding: 1.5rem; margin-bottom: 1rem; border-radius: 15px; border-left: 4px solid var(--accent-green); display: flex; align-items: center; gap: 1rem;">
+                        <i class="fas fa-print" style="font-size: 2rem; color: var(--accent-green);"></i>
                         <div>
                             <h3 style="margin-bottom: 0.5rem;">Printing & Copying</h3>
                             <p style="font-size: 0.9rem; opacity: 0.7;">Laser printing in color and B&W in various sizes (A4, A3).</p>
                         </div>
                     </li>
-                    <li style="background: var(--secondary-color); padding: 1.5rem; margin-bottom: 1rem; border-radius: 15px; border-left: 4px solid var(--accent-gold); display: flex; align-items: center; gap: 1rem;">
-                        <i class="fas fa-book" style="font-size: 2rem; color: var(--accent-gold);"></i>
+                    <li style="background: var(--secondary-color); padding: 1.5rem; margin-bottom: 1rem; border-radius: 15px; border-left: 4px solid var(--accent-green); display: flex; align-items: center; gap: 1rem;">
+                        <i class="fas fa-book" style="font-size: 2rem; color: var(--accent-green);"></i>
                         <div>
                             <h3 style="margin-bottom: 0.5rem;">Binding Services</h3>
                             <p style="font-size: 0.9rem; opacity: 0.7;">Premium, spiral, and thermal binding to preserve your documents.</p>
                         </div>
                     </li>
-                    <li style="background: var(--secondary-color); padding: 1.5rem; margin-bottom: 1rem; border-radius: 15px; border-left: 4px solid var(--accent-gold); display: flex; align-items: center; gap: 1rem;">
-                        <i class="fas fa-pen-nib" style="font-size: 2rem; color: var(--accent-gold);"></i>
+                    <li style="background: var(--secondary-color); padding: 1.5rem; margin-bottom: 1rem; border-radius: 15px; border-left: 4px solid var(--accent-green); display: flex; align-items: center; gap: 1rem;">
+                        <i class="fas fa-pen-nib" style="font-size: 2rem; color: var(--accent-green);"></i>
                         <div>
                             <h3 style="margin-bottom: 0.5rem;">Design Services</h3>
                             <p style="font-size: 0.9rem; opacity: 0.7;">Specialized team to assist in designing covers and presentations.</p>
