--- a/service2.html
+++ b/service2.html
@@ -13,7 +13,6 @@
     <header>
         <div class="logo-container">
             <img src="1.jpeg" alt="Al Rushd Logo" class="logo-img">
-            <span class="brand-name">Al Rushd</span>
         </div>
         <nav>
             <div class="mobile-toggle">
@@ -49,21 +48,21 @@
         <div style="display: flex; flex-wrap: wrap; gap: 3rem; align-items: center;">
             <div style="flex: 1; min-width: 300px;" class="reveal">
                 <ul style="list-style: none;">
-                    <li style="background: var(--secondary-color); padding: 1.5rem; margin-bottom: 1rem; border-radius: 15px; border-left: 4px solid var(--accent-green); display: flex; align-items: center; gap: 1rem;">
+                    <li style="background: rgb(245, 233, 233);; padding: 1.5rem; margin-bottom: 1rem; border-radius: 15px; border-left: 4px solid var(--accent-green); border-right: 4px solid var(--accent-green); display: flex; align-items: center; gap: 1rem;">
                         <i class="fas fa-print" style="font-size: 2rem; color: var(--accent-green);"></i>
                         <div>
                             <h3 style="margin-bottom: 0.5rem;">Printing & Copying</h3>
                             <p style="font-size: 0.9rem; opacity: 0.7;">Laser printing in color and B&W in various sizes (A4, A3).</p>
                         </div>
                     </li>
-                    <li style="background: var(--secondary-color); padding: 1.5rem; margin-bottom: 1rem; border-radius: 15px; border-left: 4px solid var(--accent-green); display: flex; align-items: center; gap: 1rem;">
+                    <li style="background: rgb(245, 233, 233);; padding: 1.5rem; margin-bottom: 1rem; border-radius: 15px; border-left: 4px solid var(--accent-green); border-right: 4px solid var(--accent-green); display: flex; align-items: center; gap: 1rem;">
                         <i class="fas fa-book" style="font-size: 2rem; color: var(--accent-green);"></i>
                         <div>
                             <h3 style="margin-bottom: 0.5rem;">Binding Services</h3>
                             <p style="font-size: 0.9rem; opacity: 0.7;">Premium, spiral, and thermal binding to preserve your documents.</p>
                         </div>
                     </li>
-                    <li style="background: var(--secondary-color); padding: 1.5rem; margin-bottom: 1rem; border-radius: 15px; border-left: 4px solid var(--accent-green); display: flex; align-items: center; gap: 1rem;">
+                    <li style="background:  rgb(245, 233, 233);; padding: 1.5rem; margin-bottom: 1rem; border-radius: 15px; border-left: 4px solid var(--accent-green); border-right: 4px solid var(--accent-green); display: flex; align-items: center; gap: 1rem;">
                         <i class="fas fa-pen-nib" style="font-size: 2rem; color: var(--accent-green);"></i>
                         <div>
                             <h3 style="margin-bottom: 0.5rem;">Design Services</h3>
