--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <header>
         <div class="logo-container">
             <img src="1.jpeg" alt="Al Rushd Logo" class="logo-img">
-            <span class="brand-name">Al Rushd </span>
         </div>
         <nav>
             <div class="mobile-toggle">
@@ -39,7 +38,7 @@
     <section class="hero">
         <div class="hero-content reveal">
             <h1>Welcome to <span>مكتبة الرشد</span></h1>
-            <p>Your premier destination for knowledge and culture. We blend the heritage of the past with the technology of the future to offer you an unforgettable reading experience.</p>
+            <p>Your premier destination for knowledge and culture. We blendorgettable reading experience.</p>
             <a href="about.html" class="btn btn-primary">Discover More</a>
         </div>
     </section>
@@ -100,7 +99,7 @@
             <i class="fas fa-quote-left" style="font-size: 3rem; color: var(--accent-green); margin-bottom: 2rem;"></i>
             <h2 style="font-size: 2.5rem; margin-bottom: 1.5rem; font-style: italic;">"Reading is travel through time without moving an inch."</h2>
             <p style="opacity: 0.8; font-size: 1.2rem; margin-bottom: 2.5rem;">Join us today and become part of our distinguished community of readers.</p>
-            <a href="contact.html" class="btn btn-primary" style="background: rgb(78, 86, 43);  color: var(--accent-green); ">Contact Us</a>
+            <a href="contact.html" class="btn btn-primary" style="background: rgb(255, 255, 255);  color: var(--accent-green); ">Contact Us</a>
         </div>
     </section>
 
